Thu Feb 15 01:52:53 2007  Koichi Sasada  <ko1@atdot.net>

	* vm.(c|h), yarvcore.(c|h) (yarvGlobalStateVersion): rename to
	  ruby_vm_global_state_version.

Thu Feb 15 01:50:26 2007  Koichi Sasada  <ko1@atdot.net>

	* test/fileutils/test_fileutils.rb (check_singleton): fix to use
	  symbole instead of string.

	* test/io/nonblock/test_flush.rb: enable tests.

	* test/xmlrpc/test_webrick_server.rb: ditto.

Thu Feb 15 01:43:45 2007  Koichi Sasada  <ko1@atdot.net>

	* lib/delegate.rb: catch up with class local variable (@_v) spec.

	* lib/singleton.rb: ditto.

Wed Feb 14 22:52:43 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_variant2val): VC++6 does not 
	  support VT_I8, VT_UI8.

Wed Feb 14 22:10:21 2007  Koichi Sasada  <ko1@atdot.net>

	* configure.in: change stack limit to 2MB from 32MB.

	* win32/Makefile.sub: ditto.

Wed Feb 14 21:39:36 2007  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/lib/digest.rb (Digest::self.const_missing): Drop
	  autoloads for sha2 classes in favor of handling in
	  const_missing(), to work around a problem exposed on OS X.

Wed Feb 14 21:19:47 2007  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.ci (native_thread_create): adjust 4KB (page size)
	  alignment.

Wed Feb 14 21:12:36 2007  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.ci (CHECK_ERR): call rb_bug()
	  instead of printf() and exit().

Wed Feb 14 16:48:56 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/date/format.rb (Date::Format::Bag::method_missing): need not
	  to use instance variables corresponding each method; use Hash
	  instead.

Wed Feb 14 13:12:06 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (reg_operand): allow symbols to be operands for regular
	  expression matches.

	* string.c (Init_String): allow Symbol#===.

	* lib/date/format.rb (Date::Format::Bag::to_hash): string
	  added prefixes.

Wed Feb 14 12:58:38 2007  Koichi Sasada  <ko1@atdot.net>

	* thread.c (do_select): fix to iterate select().