@@ -1,3 +1,10 @@
+Thu Feb 15 16:25:54 2007  Akinori MUSHA  <knu@iDaemons.org>
+
+	* lib/uri/generic.rb (URI::Generic::userinfo): Considering how
+	  `scheme://user:@...', `scheme://:password@...' and
+	  `scheme://:@...' are parsed, an empty user name or password
+	  should be allowed and represented as it is.
+
 Thu Feb 15 01:52:53 2007  Koichi Sasada  <ko1@atdot.net>
 
 	* vm.(c|h), yarvcore.(c|h) (yarvGlobalStateVersion): rename to
